--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "better-sqlite3": "^9.4.3"
+    "sql.js": "^1.10.3"
   },
   "devDependencies": {
     "typescript": "^5.7.0",
     "tsx": "^4.19.2",
     "@types/node": "^22.10.0",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/sql.js": "^1.4.8"
   }
 }
